--- a/app/templates/base.html.jinja
+++ b/app/templates/base.html.jinja
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
     <title>Ceneo.pl Web Scraper</title>
 </head>
@@ -10,13 +12,31 @@
     <header>
         <h1>Ceneo.pl Web Scraper</h1>
     </header>
+    <nav class="navbar">
+        <div>
+            <ul>
+                <li>
+                    <a href="{{url_for('index')}}"><i>Strona Główna</i></a>
+                </li>
+                <li>
+                    <a href="{{url_for('extract')}}"><i>Ekstrakcja Opinii</i></a>
+                </li>
+                <li>
+                    <a href="{{url_for('products')}}"><i>Lista Produktów</i></a>
+                </li>
+                <li>
+                    <a href="{{url_for('author')}}"><i>O Autorze</i></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <section>
         {% block content %}
         <p>To jest plik bazowy.</p>
         {% endblock content%}
     </section>
     <footer>
-        <p>Gabriela Socha, Uniwersytet Ekonomiczny w Krakowie</p>
+        <p>Michał Wyczyński, Uniwersytet Ekonomiczny w Krakowie</p>
     </footer>
 </body>
 </html>
