--- a/app/templates/base.html.jinja
+++ b/app/templates/base.html.jinja
@@ -5,38 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Ceneo.pl Web Scraper</title>
 </head>
 <body>
-    <header>
-        <h1>Ceneo.pl Web Scraper</h1>
+    <header class="p-5 text-center bg-body-tertiary">
+        <h1 class="mb-3">Ceneo.pl Web Scraper</h1>
     </header>
-    <nav class="navbar">
-        <div>
-            <ul>
-                <li>
-                    <a href="{{url_for('index')}}"><i>Strona Główna</i></a>
-                </li>
-                <li>
-                    <a href="{{url_for('extract')}}"><i>Ekstrakcja Opinii</i></a>
-                </li>
-                <li>
-                    <a href="{{url_for('products')}}"><i>Lista Produktów</i></a>
-                </li>
-                <li>
-                    <a href="{{url_for('author')}}"><i>O Autorze</i></a>
-                </li>
-            </ul>
+    <nav class="navbar navbar-expand-lg bg-body">
+        <div class="container-fluid bg-dark">
+            <div class="nav-link active"></div>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item active">
+                        <a class="nav-link text-white text-decoration-none" href="{{url_for('index')}}"><i>Strona Główna</i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white text-decoration-none" href="{{url_for('extract')}}"><i>Ekstrakcja Opinii</i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white text-decoration-none" href="{{url_for('products')}}"><i>Lista Produktów</i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white text-decoration-none" href="{{url_for('author')}}"><i>O Autorze</i></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
+    <h2 class="mt-3 mb-3 text-center">
+        {% block title %}
+            Strona Projektu
+        {% endblock title %}
+    </h2>
     <section>
         {% block content %}
         <p>To jest plik bazowy.</p>
         {% endblock content%}
     </section>
-    <footer>
-        <p>Michał Wyczyński, Uniwersytet Ekonomiczny w Krakowie</p>
-    </footer>
+    <div class="align-bottom">
+        <footer class="p-5 text-center bg-body-tertiary" style="position: fixed; bottom: 0; width:100%">
+            <h4 class="mb-3">Michał Wyczyński, Uniwersytet Ekonomiczny w Krakowie</h4>
+        </footer>
+    </div>
 </body>
 </html>
