--- a/app/templates/extract.html.jinja
+++ b/app/templates/extract.html.jinja
@@ -1,6 +1,14 @@
 {% extends "base.html.jinja" %}
+{% block title %}
+  Ekstrakcja opinii
+{% endblock title %}
 {% block content %}
-<h2 class="mt-3 mb-3 text-center">Ekstrakcja opinii</h2>
+{%if error is defined %}
+    <div class="alert alert-dark alert-dismissible fade show" role="alert">
+      <strong><i class="bi bi-exclamation-diamond-fill"></i> Uwaga! </strong>{{error}}.
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+{% endif %}
   <form method="POST" action="{{url_for('extract')}}" class="container">
     <div class="row g-3 align-items-center">
       <div class="col-auto">
@@ -8,7 +16,7 @@
       </div>
       <div class="col-auto">
         <input type="text" name="product_id" id="product_id" class="form-control" aria-describedby="product_idHelpInline"
-        placeholder="Podaj kod produktu z Ceneo.pl">
+        placeholder="Podaj kod produktu z Ceneo.pl" required>
       </div>
       <div class="col-auto">
         <span id="product_idHelpInline" class="form-text">
