--- a/app/templates/base.html.jinja
+++ b/app/templates/base.html.jinja
@@ -43,8 +43,8 @@
         {% endblock content%}
     </section>
     <div class="align-bottom">
-        <footer class="p-5 text-center bg-body-tertiary" style="position: fixed; bottom: 0; width:100%">
-            <h4 class="mb-3">Michał Wyczyński, Uniwersytet Ekonomiczny w Krakowie</h4>
+        <footer class="p-3 text-center bg-body-tertiary" style="max-height: 60px; position: fixed; bottom: 0; width:100%">
+            <h4 class="mb-3 text-center">Michał Wyczyński, Uniwersytet Ekonomiczny w Krakowie</h4>
         </footer>
     </div>
 </body>
