--- a/app/templates/product.html.jinja
+++ b/app/templates/product.html.jinja
@@ -3,5 +3,16 @@
     Produkt {{product_id}}
 {% endblock title %}
 {% block content %}
-<p>To jest strona z opiniami o produkcie {{product_id}}.</p>
+    <div class="d-flex justify-content-center">
+        <ul class="overflow-auto" style="max-height: 350px; width: 100%">
+        {% for item in opinions %}
+            <li>
+                <p>Author: {{item.author}}</p>
+                <p>Recommendation: {{item.recommendation}}</p>
+                <p>Rating: {{item.rating}}</p>
+                <p>{{item.content}}</p>
+            </li>
+        {% endfor %}
+        </ul>
+    </div>
 {% endblock content%}
