--- a/app/templates/products.html.jinja
+++ b/app/templates/products.html.jinja
@@ -3,5 +3,18 @@
     Lista Produktów
 {% endblock title %}
 {% block content %}
-    {{products}}
+    <div class="d-flex justify-content-center">
+        <ul class="overflow-auto" style="width: 100%; max-height: 350px">
+        {% for item in products %}
+            <li>
+                <a href="{{url_for('product', product_id = item.product_id)}}">{{item.product_name}}</a>
+                <p>Number of opinions: {{item.opinions_count}}</p>
+                <p>Number of pros: {{item.pros_count}}</p>
+                <p>Number of cons: {{item.cons_count}}</p>
+                <p>Average rating: {{item.avarage_rating}}</p>
+                <p>Rcommendation distribution: {{item.recommendation_distribution}}</p>
+            </li>
+        {% endfor %}
+        </ul>
+    </div>
 {% endblock content%}
